--- a/plus/index.html
+++ b/plus/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rocketcast</title>
+    <title>RadioRed</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="player">
-      <h4><i class="material-icons">equalizer</i>Rocketcast</h4>
+      <h4><i class="material-icons">equalizer</i>RadioRed</h4>
       <div class="card">
         <div class="card-image">
           <a href="#" class="btn-floating btn-large halfway-fab">
@@ -16,8 +16,8 @@
           </a>
         </div>
         <div class="card-content">
-          <h5>Title</h5>
-          <p class="artist">Artist</p>
+          <h5>Título</h5>
+          <p class="artist">Artista</p>
           <div class="row valign-wrapper" id="player-controls">
             <div class="col s2" id="current-duration">00:00</div>
             <div class="col s6 range-field valign-wrapper">
